--- a/Lax_Wendroff_scheme.ipynb
+++ b/Lax_Wendroff_scheme.ipynb
@@ -114,7 +114,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# with upwind method, we get stable solution but a bit less accuracy\n",
+        "# with upwind method, we get stable solution but a small loss in accuracy\n",
         "function upwindMatrixAssembly(m::LinearAdvection1D)\n",
         "    alpha_min=min(CFL(m),0)\n",
         "    alpha_max=max(CFL(m),0)\n",
