--- a/julia_diffusion_1D.ipynb
+++ b/julia_diffusion_1D.ipynb
@@ -76,7 +76,7 @@
         }
       ],
       "source": [
-        "# the code below is modified from https://github.com/DanPSilva/Partial-Differential-Equations/blob/master/Diffusion1D_Equation.jl\n"
+        "# the code below is modified from https://github.com/DanPSilva/Partial-Differential-Equations/blob/master/Diffusion1D_Equation.jl\n",
         "using PyPlot, LinearAlgebra, SparseArrays\n",
         "\n",
         "function diffusion_1D_theta(NX,;theta=1/2,sigma=0.2)\n",
