--- a/1D_Diffusion.ipynb
+++ b/1D_Diffusion.ipynb
@@ -412,9 +412,9 @@
     "                u[:] = spsolve(self.A, un)\n",
     "                self.sol[ti,:] = u\n",
     "                u, un = un, u\n",
-    "        elif method == \"CN\":\n",
+    "        elif method == \"theta\":\n",
     "            if (theta >=0) & (theta <= 1):\n",
-    "                print(\"using C-N method with theta=\", theta)\n",
+    "                print(\"using theta method with theta=\", theta)\n",
     "                self.LHSMatrixAssembly(sigma, theta)\n",
     "                self.RHSMatrixAssembly(sigma, theta)\n",
     "                for ti in range(1, self.Nt):\n",
@@ -422,7 +422,7 @@
     "                    self.sol[ti,:] = u\n",
     "                    u, un = un, u\n",
     "            else:\n",
-    "                raise Exception(\"CN method should provide theta between \\[0,1\\]\")\n",
+    "                raise Exception(\"theta method should provide theta between \\[0,1\\]\")\n",
     "        return self.sol\n",
     "    \n",
     "    def plot(self):\n",
@@ -465,7 +465,7 @@
      "output_type": "stream",
      "text": [
       "cdt/dx^2 is: 0.6\n",
-      "using C-N method with theta= 0.6\n"
+      "using theta method with theta= 0.6\n"
      ]
     },
     {
@@ -482,7 +482,7 @@
     }
    ],
    "source": [
-    "sol = prob.Solve(\"CN\", 0.6)\n",
+    "sol = prob.Solve(\"theta\", 0.6)\n",
     "prob.plot()"
    ]
   },
