fix Godunov's scheme

--- a/Conservation_Laws.ipynb
+++ b/Conservation_Laws.ipynb
@@ -155,9 +155,13 @@
       "cell_type": "code",
       "source": [
         "# Godunov's scheme\n",
-        "# F_{i+1/2} = u_{i+1} > u_{i} : min(f(u_{i}), f(u_{i+1})) ? max(f(u_{i}), f(u_{i+1}))\n",
+        "# F_{i+1/2} = u_{i+1} > u_{i} : min_{u_{i} <= u <= u_{i+1}}(f(u)) ? max_{u_{i+1} <= u <= u_{i}}(f(u))\n",
+        "# get the minimum of f maybe complicated, but if f is strictly convex, which has a single minimum at point w and no local maxima\n",
+        "# we could simplified the flux as:\n",
+        "# F_{i+1/2} = max(f(max(u_{i}, w)), f(min(u_{i+1}, w)))\n",
+        "# f = u^2/2, so we got w = 0 here\n",
         "function Flux(ul, ur)\n",
-        "    return ur>ul ? min(f(ul), f(ur)) : max(f(ul), f(ur))\n",
+        "    return max(f(max(ul, 0)), f(min(ur, 0)))\n",
         "end\n",
         "\n",
         "sol = solve_fvm()\n",
